@@ -2,6 +2,9 @@
 # version, don't edit this unless you're trying to manually update the config file to a newer version of mmtester
 version = 0.4.0
 
+# description of the config
+description = default config
+
 # dir where result files are saved
 results_dir = .
 
